// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={null}
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={null}
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={null}
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={null}
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={null}
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={null}
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Layout Large 1`] = `
<div
  className="layout"
>
  <div
    className="header"
  >
    <div
      id="main-header"
    >
      <div
        className="main-header-nav"
      >
        <div
          className="bg"
        />
        <div
          className="header-container"
        >
          <ul
            className="main-header-nav-body"
          >
            <li
              className="nav-li floatleft now"
            >
              <a
                href="/"
              >
                首页
              </a>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/1"
              >
                动画
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/24"
                >
                  MAD·AMV
                </a>
                <a
                  href="/sort/25"
                >
                  MMD·3D
                </a>
                <a
                  href="/sort/47"
                >
                  短片·手书·配音
                </a>
                <a
                  href="/sort/27"
                >
                  综合
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/bangumiindex"
              >
                番剧
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/33"
                >
                  连载动画
                </a>
                <a
                  href="/sort/32"
                >
                  完结动画
                </a>
                <a
                  href="/sort/152"
                >
                  官方延伸
                </a>
                <a
                  href="/sort/153"
                >
                  国产动画
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/3"
              >
                音乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/31"
                >
                  翻唱
                </a>
                <a
                  href="/sort/30"
                >
                  VOCALOID·UTAU
                </a>
                <a
                  href="/sort/29"
                >
                  三次元音乐
                </a>
                <a
                  href="/sort/28"
                >
                  同人音乐
                </a>
                <a
                  href="/sort/54"
                >
                  OP/ED/OST
                </a>
                <a
                  href="/sort/130"
                >
                  音乐选集
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/129"
              >
                舞蹈
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/20"
                >
                  宅舞
                </a>
                <a
                  href="/sort/154"
                >
                  三次元舞蹈
                </a>
                <a
                  href="/sort/156"
                >
                  舞蹈教程
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/4"
              >
                游戏
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/17"
                >
                  单机联机
                </a>
                <a
                  href="/sort/65"
                >
                  网游·电竞
                </a>
                <a
                  href="/sort/136"
                >
                  音游
                </a>
                <a
                  href="/sort/19"
                >
                  Mugen
                </a>
                <a
                  href="/sort/121"
                >
                  GMV
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/36"
              >
                科技
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/37"
                >
                  纪录片
                </a>
                <a
                  href="/sort/124"
                >
                  趣味科普人文
                </a>
                <a
                  href="/sort/122"
                >
                  野生技术协会
                </a>
                <a
                  href="/sort/39"
                >
                  演讲·公开课
                </a>
                <a
                  href="/sort/95"
                >
                  数码
                </a>
                <a
                  href="/sort/98"
                >
                  机械
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/5"
              >
                娱乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/153"
                >
                  搞笑
                </a>
                <a
                  href="/sort/138"
                >
                  生活
                </a>
                <a
                  href="/sort/75"
                >
                  动物圈
                </a>
                <a
                  href="/sort/76"
                >
                  美食圈
                </a>
                <a
                  href="/sort/71"
                >
                  综艺
                </a>
                <a
                  href="/sort/137"
                >
                  娱乐圈
                </a>
                <a
                  href="/sort/131"
                >
                  Korea相关
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/119"
              >
                鬼畜
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/22"
                >
                  鬼畜调教
                </a>
                <a
                  href="/sort/26"
                >
                  音MAD
                </a>
                <a
                  href="/sort/126"
                >
                  人力VOCALOID
                </a>
                <a
                  href="/sort/127"
                >
                  教程演示
                </a>
              </div>
            </li>
            <div
              className="header-search floatright"
            >
              <form
                id="search_form"
                onSubmit={[Function]}
              >
                <input
                  id="search_content"
                  name="keyword"
                  onChange={[Function]}
                  placeholder="这里搜索"
                  value=""
                />
                <input
                  className="btn-search"
                  title="搜索"
                  type="submit"
                  value="搜 索"
                />
              </form>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <div
      style={
        Object {
          "background": "black",
          "height": "1000px",
        }
      }
    >
      children
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      id="footer"
    >
      <div
        className="area-inner"
      >
        <div
          className="about-block floatleft"
        >
          <div
            className="about-item left floatleft"
          >
            <div
              className="about-title"
            >
              About
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="http://www.bilibili.com"
              >
                BiliBili弹幕视频网
              </a>
              <a
                href="https://github.com/vitaminac/dilidili"
              >
                项目地址
              </a>
            </div>
          </div>
          <div
            className="about-item floatleft"
          >
            <div
              className="about-title"
            >
              Contact
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="https://vitaminac.github.io/"
              >
                Blog
              </a>
              <a
                href="https://github.com/vitaminac"
              >
                Github
              </a>
            </div>
          </div>
          <div
            className="about-item right floatleft"
          >
            <div
              className="about-title"
            >
              Copyright
            </div>
            <div
              className="aboutLinks"
            >
              <span>
                © 1997-2021
              </span>
            </div>
          </div>
        </div>
        <div
          className="clear"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Normal 1`] = `
<div
  className="layout"
>
  <div
    className="header"
  >
    <div
      id="main-header"
    >
      <div
        className="main-header-nav"
      >
        <div
          className="bg"
        />
        <div
          className="header-container"
        >
          <ul
            className="main-header-nav-body"
          >
            <li
              className="nav-li floatleft now"
            >
              <a
                href="/"
              >
                首页
              </a>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/1"
              >
                动画
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/24"
                >
                  MAD·AMV
                </a>
                <a
                  href="/sort/25"
                >
                  MMD·3D
                </a>
                <a
                  href="/sort/47"
                >
                  短片·手书·配音
                </a>
                <a
                  href="/sort/27"
                >
                  综合
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/bangumiindex"
              >
                番剧
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/33"
                >
                  连载动画
                </a>
                <a
                  href="/sort/32"
                >
                  完结动画
                </a>
                <a
                  href="/sort/152"
                >
                  官方延伸
                </a>
                <a
                  href="/sort/153"
                >
                  国产动画
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/3"
              >
                音乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/31"
                >
                  翻唱
                </a>
                <a
                  href="/sort/30"
                >
                  VOCALOID·UTAU
                </a>
                <a
                  href="/sort/29"
                >
                  三次元音乐
                </a>
                <a
                  href="/sort/28"
                >
                  同人音乐
                </a>
                <a
                  href="/sort/54"
                >
                  OP/ED/OST
                </a>
                <a
                  href="/sort/130"
                >
                  音乐选集
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/129"
              >
                舞蹈
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/20"
                >
                  宅舞
                </a>
                <a
                  href="/sort/154"
                >
                  三次元舞蹈
                </a>
                <a
                  href="/sort/156"
                >
                  舞蹈教程
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/4"
              >
                游戏
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/17"
                >
                  单机联机
                </a>
                <a
                  href="/sort/65"
                >
                  网游·电竞
                </a>
                <a
                  href="/sort/136"
                >
                  音游
                </a>
                <a
                  href="/sort/19"
                >
                  Mugen
                </a>
                <a
                  href="/sort/121"
                >
                  GMV
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/36"
              >
                科技
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/37"
                >
                  纪录片
                </a>
                <a
                  href="/sort/124"
                >
                  趣味科普人文
                </a>
                <a
                  href="/sort/122"
                >
                  野生技术协会
                </a>
                <a
                  href="/sort/39"
                >
                  演讲·公开课
                </a>
                <a
                  href="/sort/95"
                >
                  数码
                </a>
                <a
                  href="/sort/98"
                >
                  机械
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/5"
              >
                娱乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/153"
                >
                  搞笑
                </a>
                <a
                  href="/sort/138"
                >
                  生活
                </a>
                <a
                  href="/sort/75"
                >
                  动物圈
                </a>
                <a
                  href="/sort/76"
                >
                  美食圈
                </a>
                <a
                  href="/sort/71"
                >
                  综艺
                </a>
                <a
                  href="/sort/137"
                >
                  娱乐圈
                </a>
                <a
                  href="/sort/131"
                >
                  Korea相关
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/119"
              >
                鬼畜
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/22"
                >
                  鬼畜调教
                </a>
                <a
                  href="/sort/26"
                >
                  音MAD
                </a>
                <a
                  href="/sort/126"
                >
                  人力VOCALOID
                </a>
                <a
                  href="/sort/127"
                >
                  教程演示
                </a>
              </div>
            </li>
            <div
              className="header-search floatright"
            >
              <form
                id="search_form"
                onSubmit={[Function]}
              >
                <input
                  id="search_content"
                  name="keyword"
                  onChange={[Function]}
                  placeholder="这里搜索"
                  value=""
                />
                <input
                  className="btn-search"
                  title="搜索"
                  type="submit"
                  value="搜 索"
                />
              </form>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <div
      style={
        Object {
          "background": "black",
          "height": "30px",
        }
      }
    >
      children
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      id="footer"
    >
      <div
        className="area-inner"
      >
        <div
          className="about-block floatleft"
        >
          <div
            className="about-item left floatleft"
          >
            <div
              className="about-title"
            >
              About
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="http://www.bilibili.com"
              >
                BiliBili弹幕视频网
              </a>
              <a
                href="https://github.com/vitaminac/dilidili"
              >
                项目地址
              </a>
            </div>
          </div>
          <div
            className="about-item floatleft"
          >
            <div
              className="about-title"
            >
              Contact
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="https://vitaminac.github.io/"
              >
                Blog
              </a>
              <a
                href="https://github.com/vitaminac"
              >
                Github
              </a>
            </div>
          </div>
          <div
            className="about-item right floatleft"
          >
            <div
              className="about-title"
            >
              Copyright
            </div>
            <div
              className="aboutLinks"
            >
              <span>
                © 1997-2021
              </span>
            </div>
          </div>
        </div>
        <div
          className="clear"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox checked"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className="archived"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox "
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className=""
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star "
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox "
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className=""
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star pinned"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Archived Task 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={true}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox checked"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className="archived"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 0 (archived)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Task 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star pinned"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
